# binsense

./: .dvcignore  .gitattributes  .gitignore  Copy_of_FinalFinetunhood.ipynb  FinalFinetunhood.ipynb  README.md  conda-environment.yml  dev-requirements.txt  dvc.yaml  params.yaml  report.md  requirements.txt
.dvc/: config
docs/: aws_ec2_steps.txt  learnings.md  owlv2_params.yaml  submission_notes.md  submission_recording_agenda_nitesh.txt
libs/: pyproject.toml
libs/binsense/: dataset_util.py  downloader.py  embed_datastore.py  img_utils.py  matcher.py  metadata.py  model_api.py  plot_utils.py  roboflow_wrapper.py  torch_utils.py  train.py  utils.py
libs/binsense/cli/: run_embeds_validator.py  run_embeds_validator_coco.py  run_extract_products.py  run_owlv2_preannotator.py  run_rawdata_downloader.py  run_rfdataset_downloader.py  run_rfdataset_validator.py  run_rfdownloader.py  run_rfds_downloader.py  run_rfds_validator_copier.py
libs/binsense/cli/owlv2/: run_bbox_embedder.py  run_bbox_embedder_coco.py  run_extract_embedded_products.py  run_handpick_dataprep1.py  run_handpick_dataprep2.py  run_handpick_dataprep3.py  run_handpick_predataprep1.py  run_handpick_predataprep2.py  run_preannotator.py  train.py  train_coco.py
libs/binsense/config/: __init__.py
libs/binsense/dataprep/: config.py  dataset.py  downloader.py  embedding_util.py  metadata.py  model_spec.py  model_util.py  owl_wrappper.py  preannotate.py  roboflow_util.py
libs/binsense/lightning/: config.py  dataset.py  losses.py  metrics.py  model.py  model_spec.py  owl_wrappper.py  owlv2_model.py  spec.py
libs/binsense/owlv2/: __init__.py  activations.py  config.py  constants.py  embedding.py  hugg_loader.py  model.py  output.py  processor.py  transformer.py  utils.py
libs/binsense/resources/: ik_data_index.csv
libs/tests/: lightining.py
notebooks/: FinalFinetunhood.ipynb  NhoodYolo.ipynb  hfhub_playground.ipynb  lossfn_playground.ipynb  metric_eval.ipynb  nl_image_search.ipynb  owlv2_datasetprep_1.ipynb  owlv2_datasetprep_2.ipynb  owlv2_datasetprep_3.ipynb  owlv2_final_dataset.ipynb  owlv2_playground.ipynb  owlv2_results_analyzer.ipynb  playground.ipynb  removetape_playground.ipynb  roboflowapi_playground.ipynb  streamlit.ipynb
python/: streamlit_demo.py
scripts/: Dockerfile  setup-conda.sh  (+1 more)
(+44 files in other folders)
